html and css added

--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="./assets/style.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <div class="box">
+        <div class="card">
+          <img src="./assets/pokemon.png" alt="pokemon" />
+          <h3>Pokemon name</h3>
+        </div>
+      </div>
+    </div>
+    <script src="./script.js"></script>
+  </body>
 </html>
